Aligned calendar header & fixed overflow issue

--- a/style/calendar.css
+++ b/style/calendar.css
@@ -4,8 +4,6 @@ ul {list-style-type: none;}
 /* Calendar */
 #calendar {
   text-align:center;
-  height:80%;
-  width:80%;
   background-image:linear-gradient(to right, rgba(233,197,197,0.5), rgba(197,215,233,0.5)), linear-gradient(#DDDDDD 0.5px, transparent 1px);
   background-size:  100% 9%;
   background-repeat: repeat-y;
@@ -15,7 +13,9 @@ ul {list-style-type: none;}
 #main {
     display: flex;
     flex-flow: column;
-    height: 100%;
+    height: 80%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .box {
@@ -34,11 +34,13 @@ ul {list-style-type: none;}
 }
 
 #newExperiment .modal-content {
-  background-color: #FBF3F3;
+  background-color: #FFFFFF;
 }
-#newExperiment .modal-content {
-  background-color: #FBF3F3;
+
+.week-link {
+  align-self: center;
 }
+
 
 .btn-green-transform {
   background-color:#79ab79;
@@ -91,4 +93,21 @@ ul {list-style-type: none;}
   padding: 0px;
   background-color: #E9C5C5;
   border-radius: 15px;
+}
+#search-results {
+  text-align: center;
+  border-bottom: 1px solid #dedede;
+  border-radius: 3px;
+  box-sizing: border-box;
+  overflow-y: auto;
+  max-height: 5em;
+}
+
+.search-result {
+  background: white;
+  padding: 10px;
+}
+
+.search-result:nth-child(even) {
+  background: #fafafa;
 }
